--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Registration Form</title>
+    <title>Formular Înregistrare Restanță Nefrologie</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Registration Form</h1>
-        <form id="registrationForm">
-            <label for="options">Choose an option:</label>
-            <select id="options" name="options" required>
+        <h1>Formular Înregistrare Restanță Nefrologie</h1>
+        <form id="Formular Înregistrare Restanță Nefrologie">
+            <label for="Preferință zi"> Preferință zi:</label>
+            <select id="Preferință zi" name="Preferință zi" required>
                 <option value="1.07">1.07</option>
                 <option value="2.07">2.07</option>
                 <option value="3.07">3.07</option>
                 <option value="4.07">4.07</option>
             </select>
 
-            <label for="userText">Your Text:</label>
-            <textarea id="userText" name="userText" required></textarea>
+            <label for="Nume/Prenume/Grupă">Nume/Prenume/Grupă:</label>
+            <textarea id="Nume/Prenume/Grupă" name="Nume/Prenume/Grupă" required></textarea>
 
-            <button type="submit">Submit</button>
+            <button type="Încarcă răspunsul">Încarcă răspunsul</button>
         </form>
 
         <div id="message"></div>
-        <button id="download">Download Registrations</button>
+        <button id="download">Descarcă Înregistrările curente</button>
     </div>
 
     <script src="script.js"></script>
