--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>Admin Login</h2>
         <form id="adminLoginForm">
             <label for="adminPassword">Password:</label>
-            <input type="password" id="adminPassword" required>
+            <input type="password" id="adminPassword" name="adminPassword" placeholder="Enter password" required>
             <button type="submit">Login</button>
         </form>
 
