--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formular Înregistrare Restanță Nefrologie</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-database.js"></script>
 </head>
 <body>
     <div class="container">
@@ -30,7 +32,7 @@
         <h2>Admin Login</h2>
         <form id="adminLoginForm">
             <label for="adminPassword">Password:</label>
-            <input type="password" id="adminPassword" name="adminPassword" placeholder="Enter password" required>
+            <input type="password" id="adminPassword" required>
             <button type="submit">Login</button>
         </form>
 
