--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formular Înregistrare Restanță Nefrologie</title>
+    <script type="module">
+        // Import Firebase SDK
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app-compat.js";
+        import { getDatabase, ref, push, set, onValue } from "firebase/database";
+        const firebaseConfig = {
+        apiKey: "AIzaSyBaY09UOzbRhC47atAKM7MSKy2wVrRJl58",
+        authDomain: "inregistrare-nefro.firebaseapp.com",
+        databaseURL: "https://inregistrare-nefro-default-rtdb.europe-west1.firebasedatabase.app/",
+        projectId: "inregistrare-nefro",
+        storageBucket: "inregistrare-nefro.appspot.com",
+        messagingSenderId: "946617723576",
+        appId: "1:946617723576:web:f0f1ca4f0ee11cba15e24d"
+    };
+        const app = initializeApp(firebaseConfig);
+        const database = getDatabase(app);
+    </script>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-database.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app-compat.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.1.1/firebase-database-compat.js"></script>
+    <script type="module" src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -41,7 +59,6 @@
             <div id="entries"></div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
