--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module">
         // Import Firebase SDK
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app-compat.js";
-        import { getDatabase, ref, push, set, onValue } from "firebase/database";
+        import { getDatabase, ref, push, set, onValue } from "https://inregistrare-nefro-default-rtdb.europe-west1.firebasedatabase.app/";
         const firebaseConfig = {
         apiKey: "AIzaSyBaY09UOzbRhC47atAKM7MSKy2wVrRJl58",
         authDomain: "inregistrare-nefro.firebaseapp.com",
